ii/cluster/cncf-ci-redirect.yaml
# cncf.ci redirect
# #+NAME: Certs

apiVersion: v1
kind: Namespace
metadata:
  name: cncf-ci-redirect
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cncf-ci-redirect
  namespace: cncf-ci-redirect
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*) https://github.com/cncf-ci permanent;
spec:
  rules:
  - host: cncf.ci
    http:
      paths:
      - backend:
          service:
            name: cncf-ci-redirect
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - cncf.ci
    secretName: letsencrypt-prod
