ii/cluster/kanboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kanboard
  name: kanboard
  namespace: kanban-ii-coop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - image: kanboard/kanboard:v1.2.20
        name: kanboard
        ports:
          - containerPort: 80
        volumeMounts:
          - name: kanboard
            mountPath: /var/www/app/data
      volumes:
      - name: kanboard
        persistentVolumeClaim:
          claimName: kanboard
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kanboard
  name: kanboard
  namespace: kanban-ii-coop
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kanboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  namespace: kanban-ii-coop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kanban.ii.coop
    http:
      paths:
      - backend:
          service:
            name: kanboard
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kanban.ii.coop
    secretName: letsencrypt-prod
